@@ -1,13 +1,9 @@
 <tal:page i18n:domain="cmf_default"
-   tal:define="ptool context/portal_properties;
-               member_email options/member/email | string:foo@example.org"
 >Subject: <tal:span i18n:translate=""><tal:span i18n:name="portal_title"
-    tal:content="ptool/title" />: Membership reminder</tal:span>
-From: <tal:span
-   tal:content="ptool/email_from_name" /> <tal:span
-   tal:replace="structure string:&lt;${ptool/email_from_address}>" />
-To: <tal:span tal:replace="structure string:&lt;${member_email}>" />
-Content-Type: text/plain
+    tal:content="options/portal_title" />: Membership reminder</tal:span>
+From: <tal:span tal:replace="structure options/portal_address" />
+To: <tal:span tal:replace="structure options/member_address" />
+Content-Type: <tal:span tal:replace="structure options/content_type" />
 
 <tal:span i18n:translate="">Your password: <tal:span i18n:name="password"
     tal:content="options/password | default">baz</tal:span></tal:span>
